@@ -18,45 +18,116 @@ import ClusterShell.NodeSet
 from ClusterShell.NodeSet import *
 from ClusterShell.NodeUtils import *
 
+def makeTestFile(text):
+    """Create a temporary file with the provided text."""
+    f = tempfile.NamedTemporaryFile()
+    f.write(text)
+    f.flush()
+    return f
+
+def makeTestG1():
+    """Create a temporary group file 1"""
+    f1 = makeTestFile("""
+#
+oss: montana5,montana4
+mds: montana6
+io: montana[4-6]
+#42: montana3
+compute: montana[32-163]
+chassis1: montana[32-33]
+chassis2: montana[34-35]
+ 
+chassis3: montana[36-37]
+  
+chassis4: montana[38-39]
+chassis5: montana[40-41]
+chassis6: montana[42-43]
+chassis7: montana[44-45]
+chassis8: montana[46-47]
+chassis9: montana[48-49]
+chassis10: montana[50-51]
+chassis11: montana[52-53]
+chassis12: montana[54-55]
+Uppercase: montana[1-2]
+gpuchassis: @chassis[4-5]
+gpu: montana[38-41]
+all: montana[1-6,32-163]
+""")
+    # /!\ Need to return file object and not f1.name, otherwise the temporary
+    # file might be immediately unlinked.
+    return f1
+
+def makeTestG2():
+    """Create a temporary group file 2"""
+    f2 = makeTestFile("""
+#
+#
+para: montana[32-37,42-55]
+gpu: montana[38-41]
+""")
+    return f2
+
+def makeTestG3():
+    """Create a temporary group file 3"""
+    f3 = makeTestFile("""
+#
+#
+all: montana[32-55]
+para: montana[32-37,42-55]
+gpu: montana[38-41]
+login: montana[32-33]
+overclock: montana[41-42]
+chassis1: montana[32-33]
+chassis2: montana[34-35]
+chassis3: montana[36-37]
+single: idaho
+""")
+    return f3
+
+def makeTestR3():
+    """Create a temporary reverse group file 3"""
+    r3 = makeTestFile("""
+#
+#
+montana32: all,para,login,chassis1
+montana33: all,para,login,chassis1
+montana34: all,para,chassis2
+montana35: all,para,chassis2
+montana36: all,para,chassis3
+montana37: all,para,chassis3
+montana38: all,gpu
+montana39: all,gpu
+montana40: all,gpu
+montana41: all,gpu,overclock
+montana42: all,para,overclock
+montana43: all,para
+montana44: all,para
+montana45: all,para
+montana46: all,para
+montana47: all,para
+montana48: all,para
+montana49: all,para
+montana50: all,para
+montana51: all,para
+montana52: all,para
+montana53: all,para
+montana54: all,para
+montana55: all,para
+idaho: single
+""")
+    return r3
 
 class NodeSetGroupTest(unittest.TestCase):
-
-    def setSimpleStdGroupResolver(self):
-        # create 2 GroupSource objects
-        default = GroupSource("default",
-                              "awk -F: '/^$GROUP:/ {print $2}' test_groups1",
-                              "awk -F: '/^all:/ {print $2}' test_groups1",
-                              "awk -F: '/^\w/ {print $1}' test_groups1",
-                              None)
-
-        source2 = GroupSource("source2",
-                              "awk -F: '/^$GROUP:/ {print $2}' test_groups2",
-                              "awk -F: '/^all:/ {print $2}' test_groups2",
-                              "awk -F: '/^\w/ {print $1}' test_groups2",
-                              None)
-
-        ClusterShell.NodeSet.STD_GROUP_RESOLVER = GroupResolver(default)
-        ClusterShell.NodeSet.STD_GROUP_RESOLVER.add_source(source2)
-
-    def restoreStdGroupResolver(self):
-        ClusterShell.NodeSet.STD_GROUP_RESOLVER = ClusterShell.NodeSet.DEF_STD_GROUP_RESOLVER
-
-    def makeTestFile(self, text):
-        """
-        Create a temporary file with the provided text.
-        """
-        f = tempfile.NamedTemporaryFile()
-        f.write(text)
-        f.flush()
-        return f
 
     def testGroupResolverSimple(self):
         """test NodeSet with simple custom GroupResolver"""
 
+        test_groups1 = makeTestG1()
+
         source = GroupSource("simple",
-                             "awk -F: '/^$GROUP:/ {print $2}' test_groups1",
-                             "awk -F: '/^all:/ {print $2}' test_groups1",
-                             "awk -F: '/^\w/ {print $1}' test_groups1",
+                             "awk -F: '/^$GROUP:/ {print $2}' %s" % test_groups1.name,
+                             "awk -F: '/^all:/ {print $2}' %s" % test_groups1.name,
+                             "awk -F: '/^\w/ {print $1}' %s" % test_groups1.name,
                              None)
 
         # create custom resolver with default source
@@ -93,60 +164,6 @@ class NodeSetGroupTest(unittest.TestCase):
                           resolver=res)
         self.assertEqual(str(nodeset), "montana[3,40-41,77]")
 
-    def testGroupSyntaxes(self):
-        """test NodeSet group operation syntaxes"""
-
-        self.setSimpleStdGroupResolver()
-        try:
-            nodeset = NodeSet("@gpu")
-            self.assertEqual(str(nodeset), "montana[38-41]")
-
-            nodeset = NodeSet("@chassis[1-3,5]&@chassis[2-3]")
-            self.assertEqual(str(nodeset), "montana[34-37]")
-
-            nodeset1 = NodeSet("@io!@mds")
-            nodeset2 = NodeSet("@oss")
-            self.assertEqual(str(nodeset1), str(nodeset2))
-            self.assertEqual(str(nodeset1), "montana[4-5]")
-
-        finally:
-            self.restoreStdGroupResolver()
-
-    def testGroupListDefault(self):
-        """test group listing GroupResolver.grouplist()"""
-        self.setSimpleStdGroupResolver()
-        try:
-            groups = ClusterShell.NodeSet.STD_GROUP_RESOLVER.grouplist()
-            self.assertEqual(len(groups), 21)
-            helper_groups = grouplist()
-            self.assertEqual(len(helper_groups), 21)
-            total = 0
-            nodes = NodeSet()
-            for group in groups:
-                ns = NodeSet("@%s" % group)
-                total += len(ns)
-                nodes.update(ns)
-            self.assertEqual(total, 311)
-
-            all_nodes = NodeSet.fromall()
-            self.assertEqual(len(all_nodes), len(nodes))
-            self.assertEqual(all_nodes, nodes)
-        finally:
-            self.restoreStdGroupResolver()
-
-    def testGroupListSource2(self):
-        """test group listing GroupResolver.grouplist(source)"""
-        self.setSimpleStdGroupResolver()
-        try:
-            groups = ClusterShell.NodeSet.STD_GROUP_RESOLVER.grouplist("source2")
-            self.assertEqual(len(groups), 2)
-            total = 0
-            for group in groups:
-                total += len(NodeSet("@source2:%s" % group))
-            self.assertEqual(total, 24)
-        finally:
-            self.restoreStdGroupResolver()
-
     def testAllNoResolver(self):
         """test NodeSet.fromall() with no resolver"""
         self.assertRaises(NodeSetExternalError, NodeSet.fromall,
@@ -154,9 +171,11 @@ class NodeSetGroupTest(unittest.TestCase):
             
     def testGroupResolverMinimal(self):
         """test NodeSet with minimal GroupResolver"""
+        
+        test_groups1 = makeTestG1()
 
         source = GroupSource("minimal",
-                             "awk -F: '/^$GROUP:/ {print $2}' test_groups1",
+                             "awk -F: '/^$GROUP:/ {print $2}' %s" % test_groups1.name,
                              None, None, None)
 
         # create custom resolver with default source
@@ -172,17 +191,17 @@ class NodeSetGroupTest(unittest.TestCase):
     
     def testConfigEmpty(self):
         """test groups with an empty configuration file"""
-        f = self.makeTestFile("")
+        f = makeTestFile("")
         res = GroupResolverConfig(f.name)
         nodeset = NodeSet("example[1-100]", resolver=res)
         self.assertEqual(str(nodeset), "example[1-100]")
-        self.assertEqual(nodeset.regroup(), "example[1-100]")
+        self.assertRaises(GroupResolverSourceError, nodeset.regroup)
         # non existant group
-        self.assertRaises(NodeSetParseError, NodeSet, "@bar", resolver=res)
+        self.assertRaises(GroupResolverSourceError, NodeSet, "@bar", resolver=res)
 
     def testConfigBasicLocal(self):
         """test groups with a basic local config file"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -214,7 +233,7 @@ list: echo foo
 
     def testConfigBasicLocalVerbose(self):
         """test groups with a basic local config file (verbose)"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -235,7 +254,7 @@ list: echo foo
 
     def testConfigBasicLocalAlternative(self):
         """test groups with a basic local config file (= alternative)"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -256,7 +275,7 @@ list=echo foo
 
     def testConfigBasicEmptyDefault(self):
         """test groups with a empty default namespace"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -276,7 +295,7 @@ list: echo foo
 
     def testConfigBasicNoMain(self):
         """test groups with a local config without main section"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [local]
@@ -293,7 +312,7 @@ list: echo foo
 
     def testConfigBasicWrongDefault(self):
         """test groups with a wrong default namespace"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -309,7 +328,7 @@ list: echo foo
 
     def testConfigQueryFailed(self):
         """test groups with config and failed query"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -328,7 +347,7 @@ list: echo foo
 
     def testConfigRegroupWrongNamespace(self):
         """test groups by calling regroup(wrong_namespace)"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -346,7 +365,7 @@ list: echo foo
 
     def testConfigNoListButReverseQuery(self):
         """test groups with no list but reverse upcall"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -365,7 +384,7 @@ reverse: echo foo
 
     def testConfigWithEmptyList(self):
         """test groups with list upcall returning nothing"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -384,7 +403,7 @@ reverse: echo foo
 
     def testConfigCrossRefs(self):
         """test groups config with cross references"""
-        f = self.makeTestFile("""
+        f = makeTestFile("""
 # A comment
 
 [Main]
@@ -401,6 +420,153 @@ map: echo @local:foo
         self.assertEqual(str(nodeset), "example[1-100]")
 
 
+
+class NodeSetGroup2GSTest(unittest.TestCase):
+
+    def setUp(self):
+        """configure simple STD_GROUP_RESOLVER"""
+
+        # create temporary groups file and keep a reference to avoid file closing
+        self.test_groups1 = makeTestG1()
+        self.test_groups2 = makeTestG2()
+
+        # create 2 GroupSource objects
+        default = GroupSource("default",
+                              "awk -F: '/^$GROUP:/ {print $2}' %s" % self.test_groups1.name,
+                              "awk -F: '/^all:/ {print $2}' %s" % self.test_groups1.name,
+                              "awk -F: '/^\w/ {print $1}' %s" % self.test_groups1.name,
+                              None)
+
+        source2 = GroupSource("source2",
+                              "awk -F: '/^$GROUP:/ {print $2}' %s" % self.test_groups2.name,
+                              "awk -F: '/^all:/ {print $2}' %s" % self.test_groups2.name,
+                              "awk -F: '/^\w/ {print $1}' %s" % self.test_groups2.name,
+                              None)
+
+        ClusterShell.NodeSet.STD_GROUP_RESOLVER = GroupResolver(default)
+        ClusterShell.NodeSet.STD_GROUP_RESOLVER.add_source(source2)
+
+    def tearDown(self):
+        """restore default STD_GROUP_RESOLVER"""
+        ClusterShell.NodeSet.STD_GROUP_RESOLVER = ClusterShell.NodeSet.DEF_STD_GROUP_RESOLVER
+        del self.test_groups1
+        del self.test_groups2
+
+    def testGroupSyntaxes(self):
+        """test NodeSet group operation syntaxes"""
+        nodeset = NodeSet("@gpu")
+        self.assertEqual(str(nodeset), "montana[38-41]")
+
+        nodeset = NodeSet("@chassis[1-3,5]&@chassis[2-3]")
+        self.assertEqual(str(nodeset), "montana[34-37]")
+
+        nodeset1 = NodeSet("@io!@mds")
+        nodeset2 = NodeSet("@oss")
+        self.assertEqual(str(nodeset1), str(nodeset2))
+        self.assertEqual(str(nodeset1), "montana[4-5]")
+
+    def testGroupListDefault(self):
+        """test NodeSet group listing GroupResolver.grouplist()"""
+        groups = ClusterShell.NodeSet.STD_GROUP_RESOLVER.grouplist()
+        self.assertEqual(len(groups), 20)
+        helper_groups = grouplist()
+        self.assertEqual(len(helper_groups), 20)
+        total = 0
+        nodes = NodeSet()
+        for group in groups:
+            ns = NodeSet("@%s" % group)
+            total += len(ns)
+            nodes.update(ns)
+        self.assertEqual(total, 310)
+
+        all_nodes = NodeSet.fromall()
+        self.assertEqual(len(all_nodes), len(nodes))
+        self.assertEqual(all_nodes, nodes)
+
+    def testGroupListSource2(self):
+        """test NodeSet group listing GroupResolver.grouplist(source)"""
+        groups = ClusterShell.NodeSet.STD_GROUP_RESOLVER.grouplist("source2")
+        self.assertEqual(len(groups), 2)
+        total = 0
+        for group in groups:
+            total += len(NodeSet("@source2:%s" % group))
+        self.assertEqual(total, 24)
+
+    def testGroupNoPrefix(self):
+        """test NodeSet group noprefix option"""
+        nodeset = NodeSet("montana[32-37,42-55]")
+        self.assertEqual(nodeset.regroup("source2"), "@source2:para")
+        self.assertEqual(nodeset.regroup("source2", noprefix=True), "@para")
+
+class NodeSetRegroupTest(unittest.TestCase):
+
+    def testGroupResolverReverse(self):
+        """test NodeSet GroupResolver with reverse upcall"""
+
+        test_groups3 = makeTestG3()
+        test_reverse3 = makeTestR3()
+
+        source = GroupSource("test",
+                             "awk -F: '/^$GROUP:/ {print $2}' %s" % test_groups3.name,
+                             "awk -F: '/^all:/ {print $2}' %s" % test_groups3.name,
+                             "awk -F: '/^\w/ { print $1 }' %s" % test_groups3.name,
+                             "awk -F: '/^$NODE:/ { gsub(\",\",\"\\n\",$2); print $2 }' %s" % test_reverse3.name)
+
+        # create custom resolver with default source
+        res = GroupResolver(source)
+
+        nodeset = NodeSet("@all", resolver=res)
+        self.assertEqual(nodeset, NodeSet("montana[32-55]"))
+        self.assertEqual(str(nodeset), "montana[32-55]")
+        self.assertEqual(nodeset.regroup(), "@all")
+        self.assertEqual(nodeset.regroup(), "@all")
+
+        nodeset = NodeSet("@overclock", resolver=res)
+        self.assertEqual(nodeset, NodeSet("montana[41-42]"))
+        self.assertEqual(str(nodeset), "montana[41-42]")
+        self.assertEqual(nodeset.regroup(), "@overclock")
+        self.assertEqual(nodeset.regroup(), "@overclock")
+
+        nodeset = NodeSet("@gpu,@overclock", resolver=res)
+        self.assertEqual(nodeset, NodeSet("montana[38-42]"))
+        self.assertEqual(str(nodeset), "montana[38-42]")
+        # un-overlap :)
+        self.assertEqual(nodeset.regroup(), "@gpu,montana42")
+        self.assertEqual(nodeset.regroup(), "@gpu,montana42")
+        self.assertEqual(nodeset.regroup(overlap=True), "@gpu,@overclock")
+
+        nodeset = NodeSet("montana41", resolver=res)
+        self.assertEqual(nodeset.regroup(), "montana41")
+        self.assertEqual(nodeset.regroup(), "montana41")
+
+        # test regroup code when using unindexed node
+        nodeset = NodeSet("idaho", resolver=res)
+        self.assertEqual(nodeset.regroup(), "@single")
+        self.assertEqual(nodeset.regroup(), "@single")
+        nodeset = NodeSet("@single", resolver=res)
+        self.assertEqual(str(nodeset), "idaho")
+        # unresolved unindexed:
+        nodeset = NodeSet("utah", resolver=res)
+        self.assertEqual(nodeset.regroup(), "utah")
+        self.assertEqual(nodeset.regroup(), "utah")
+
+        nodeset = NodeSet("@all!montana38", resolver=res)
+        self.assertEqual(nodeset, NodeSet("montana[32-37,39-55]"))
+        self.assertEqual(str(nodeset), "montana[32-37,39-55]")
+        self.assertEqual(nodeset.regroup(), "@para,montana[39-41]")
+        self.assertEqual(nodeset.regroup(), "@para,montana[39-41]")
+        self.assertEqual(nodeset.regroup(overlap=True),
+            "@chassis[1-3],@login,@overclock,@para,montana[39-40]")
+        self.assertEqual(nodeset.regroup(overlap=True),
+            "@chassis[1-3],@login,@overclock,@para,montana[39-40]")
+
+        nodeset = NodeSet("montana[32-37]", resolver=res)
+        self.assertEqual(nodeset.regroup(), "@chassis[1-3]")
+        self.assertEqual(nodeset.regroup(), "@chassis[1-3]")
+
+
 if __name__ == '__main__':
-    suite = unittest.TestLoader().loadTestsFromTestCase(NodeSetGroupTest)
-    unittest.TextTestRunner(verbosity=2).run(suite)
+    suites = [unittest.TestLoader().loadTestsFromTestCase(NodeSetGroupTest)]
+    suites.append(unittest.TestLoader().loadTestsFromTestCase(NodeSetGroup2GSTest))
+    suites.append(unittest.TestLoader().loadTestsFromTestCase(NodeSetRegroupTest))
+    unittest.TextTestRunner(verbosity=2).run(unittest.TestSuite(suites))
